# github-telemetry

./: .env.template  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  test-telemetry-duration.yml  test-telemetry-failures.yml
src/backend/: .env.template  Dockerfile  __init__.py  app.py  processor.py  telemetry.py
src/frontend/: .env.template  Dockerfile  __init__.py  app.py  config.py  models.py  processor.py  telemetry.py
src/shared/: __init__.py  config.py  github_signature.py  models.py  processor.py  queue_client.py
tests/: conftest.py
tests/backend/: test_processor.py  test_telemetry.py
tests/frontend/: test_app.py  test_github_signature.py  test_models.py  test_processor.py  test_telemetry.py
tests/shared/: test_github_signature.py  test_models.py
